--- a/crypto.html
+++ b/crypto.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="crypto.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agdasima&family=Oswald&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Crypto rate</title>
 </head>
 <body>
     <h1>CRYPTO RATE</h1>
@@ -23,6 +23,6 @@
             </div>
         </div>
 
-    <script src="index.js"></script>
+    <script src="crypto.js"></script>
 </body>
 </html>
