fix all and put comments

--- a/crypto.html
+++ b/crypto.html
@@ -15,12 +15,13 @@
                 <div class="search">
                     <input id="search-input" type="text" placeholder="Search" >
                 </div>
-            <div id="loading-indicator" class="loading"></div>
-            <div class="list">
-                <div id="cryptocurrency-list" class="cryptocurrency-list"></div>
-                
-                <div id="end-notification" class="notification"></div>
-            </div>
+                <div id="loading-indicator" class="loading"></div>
+                <div class="list">
+                    <div id="cryptocurrency-list" class="cryptocurrency-list"></div>
+                </div>
+                    <div class="notif">
+                        <div id="end-notification" class="notification"></div>
+                    </div>
         </div>
 
     <script src="crypto.js"></script>
